--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ngneat/spectator": "^15.0.1",
     "@types/jest": "^29.5.10",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^13.1.4",
     "typescript": "~5.2.2"
   }
 }
