--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "start": "nx serve",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development",
     "test": "jest --verbose"
   },
   "private": true,
@@ -27,12 +27,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.3",
+    "@angular-devkit/core": "^17.0.3",
+    "@angular-devkit/schematics": "^17.0.3",
     "@angular/cli": "^17.0.3",
     "@angular/compiler-cli": "^17.0.0",
     "@ngneat/spectator": "^15.0.1",
+    "@nx/angular": "17.1.3",
+    "@nx/workspace": "17.1.3",
+    "@schematics/angular": "^17.0.3",
     "@types/jest": "^29.5.10",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.4",
+    "nx": "17.1.3",
     "typescript": "~5.2.2"
   }
 }
