--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "nx serve",
+    "start": " nx run-many --target=serve --projects=BeautifulMindApp,beautiful-mind-api",
     "build": "nx build",
     "watch": "nx build --watch --configuration development",
     "test": "jest --verbose"
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.0.0",
     "date-fns": "^2.30.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -31,14 +36,34 @@
     "@angular-devkit/schematics": "^17.0.3",
     "@angular/cli": "^17.0.3",
     "@angular/compiler-cli": "^17.0.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@ngneat/spectator": "^15.0.1",
     "@nx/angular": "17.1.3",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/js": "17.1.3",
+    "@nx/nest": "^17.1.3",
+    "@nx/node": "17.1.3",
+    "@nx/webpack": "17.1.3",
     "@nx/workspace": "17.1.3",
     "@schematics/angular": "^17.0.3",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/jest": "^29.5.10",
+    "@types/node": "~18.7.1",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "~8.46.0",
+    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "^13.1.4",
     "nx": "17.1.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.2.2"
   }
 }
