--- a/beautiful-mind-app/project.json
+++ b/beautiful-mind-app/project.json
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/nx/schemas/project-schema.json",
-  "name": "BeautifulMindApp",
+  "name": "beautiful-mind-app",
   "projectType": "application",
   "generators": {
     "@ngneat/spectator:spectator-component": {
@@ -10,25 +10,25 @@
       "style": "scss"
     }
   },
-  "sourceRoot": "src",
+  "sourceRoot": "beautiful-mind-app/src",
   "prefix": "app",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
       "options": {
         "outputPath": "dist/beautiful-mind-app",
-        "index": "src/index.html",
-        "browser": "src/main.ts",
+        "index": "beautiful-mind-app/src/index.html",
+        "browser": "beautiful-mind-app/src/main.ts",
         "polyfills": [
           "zone.js"
         ],
-        "tsConfig": "tsconfig.app.json",
+        "tsConfig": "beautiful-mind-app/tsconfig.app.json",
         "assets": [
-          "src/favicon.ico",
-          "src/assets"
+          "beautiful-mind-app/src/favicon.ico",
+          "beautiful-mind-app/src/assets"
         ],
         "styles": [
-          "src/styles.scss"
+          "beautiful-mind-app/src/styles.scss"
         ],
         "scripts": []
       },
@@ -54,8 +54,8 @@
           "sourceMap": true,
           "fileReplacements": [
             {
-              "replace": "src/environments/environment.ts",
-              "with": "src/environments/environment.development.ts"
+              "replace": "beautiful-mind-app/src/environments/environment.ts",
+              "with": "beautiful-mind-app/src/environments/environment.development.ts"
             }
           ]
         }
@@ -66,10 +66,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "BeautifulMindApp:build:production"
+          "buildTarget": "beautiful-mind-app:build:production"
         },
         "development": {
-          "buildTarget": "BeautifulMindApp:build:development"
+          "buildTarget": "beautiful-mind-app:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -77,7 +77,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "BeautifulMindApp:build"
+        "buildTarget": "beautiful-mind-app:build"
       }
     },
     "test": {
@@ -87,7 +87,7 @@
           "zone.js",
           "zone.js/testing"
         ],
-        "tsConfig": "tsconfig.spec.json"
+        "tsConfig": "beautiful-mind-app/tsconfig.spec.json"
       }
     }
   }
