--- a/beautiful-mind-api/tsconfig.json
+++ b/beautiful-mind-api/tsconfig.json
@@ -11,6 +11,11 @@
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@event/*": [
+        "./src/event/*"
+      ]
+    }
   }
 }
