--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@schematics/angular": "^17.0.3",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
