TypeORM installed, user module added

--- a/beautiful-mind-api/tsconfig.json
+++ b/beautiful-mind-api/tsconfig.json
@@ -16,6 +16,9 @@
     "paths": {
       "@event/*": [
         "./src/event/*"
+      ],
+      "@user/*": [
+        "./src/user/*"
       ]
     }
   }
