AuthGuard created and a test route in AuthController, new path added to tsconfig

--- a/beautiful-mind-api/tsconfig.json
+++ b/beautiful-mind-api/tsconfig.json
@@ -14,12 +14,9 @@
     "baseUrl": "./",
     "esModuleInterop": true,
     "paths": {
-      "@event/*": [
-        "./src/event/*"
-      ],
-      "@user/*": [
-        "./src/user/*"
-      ]
+      "@auth/*": ["./src/auth/*"],
+      "@event/*": ["./src/event/*"],
+      "@user/*": ["./src/user/*"]
     }
   }
 }
