--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.1",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
@@ -55,6 +56,7 @@
     "@schematics/angular": "^17.0.3",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/node": "~18.7.1",
