--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/typeorm": "^10.0.1",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
