--- a/beautiful-mind-app/tsconfig.json
+++ b/beautiful-mind-app/tsconfig.json
@@ -7,15 +7,10 @@
       "dom"
     ],
     "paths": {
-      "@core/*": [
-        "./src/app/core/*"
-      ],
-      "@home/*": [
-        "./src/app/home/*"
-      ],
-      "@planner/*": [
-        "./src/app/planner/*"
-      ]
+      "@auth/*": ["./src/app/auth/*"],
+      "@core/*": ["./src/app/core/*"],
+      "@home/*": ["./src/app/home/*"],
+      "@planner/*": ["./src/app/planner/*"]
     }
   },
   "angularCompilerOptions": {
